Work on landing page

--- a/main.html
+++ b/main.html
@@ -12,19 +12,25 @@
     </head>
 
     <body id="main_body">
-        <main id="main_main">
-            <img class="main_content" id="main_img" src="images/mb_icon.jpg" alt="Muthybaby Logo"> 
-            <h1 class="main_content">Austin Muthyala</h1>
-            <p class="main_content">Trumpeter, Composer, Content Creator</p>
-            <div class="main_content" id="main_nav">
-                <ul id="main_list">
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="music.html">Music</a></li>
-                    <li><a href="content_creation.html">Content Creation</a></li>
-                    <li><a href="gigs_events.html">Gigs and Events</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+        <header>
+            <nav>
+                <ul class="navigation_list">
+                    <li><a class="nav_link" href="main.html">Home</a></li>
+                    <li><a class="nav_link" href="about.html">About</a></li>
+                    <li><a class="nav_link" href="music.html">Music</a></li>
+                    <li><a class="nav_link" href="content_creation.html">Videos</a></li>
+                    <li><a class="nav_link" href="gigs_events.html">Gigs</a></li>
+                    <li><a class="nav_link" href="contact.html">Contact</a></li>
                 </ul>
-            </div>
+            </nav>
+        </header>
+
+        <main id="main_main">
+            <img id="main_img" src="images/mb_icon.jpg" alt="Muthybaby Logo"> 
+            <h1 class="main_content">Austin Muthyala</h1>
+            <p class="main_content">Trumpeter</p>
+            <p class="main_content">Composer</p>
+            <p class="main_content">Content Creator</p>
         </main>
 
         <footer>
