Bones of about page set up

--- a/about.html
+++ b/about.html
@@ -12,26 +12,29 @@
     </head>
 
     <body>
-        <a class = "skip" href="#main">Skip to Content</a>
+        <a class = "skip" href="#about_main">Skip to Content</a>
         <header>
             <nav>
-              <ul>
-                <li><a href="main.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="music.html">Music</a></li>
-                <li><a href="content_creation.html">Content Creation</a></li>
-                <li><a href="gigs_events.html">Gigs and Events</a></li>
-                <li><a href="contact.html">Contact</a></li>
-              </ul>
-          </nav>
+                <ul class="navigation_list">
+                    <li><a class="nav_link" href="main.html">Home</a></li>
+                    <li><a class="nav_link" href="about.html">About</a></li>
+                    <li><a class="nav_link" href="music.html">Music</a></li>
+                    <li><a class="nav_link" href="content_creation.html">Videos</a></li>
+                    <li><a class="nav_link" href="gigs_events.html">Gigs</a></li>
+                    <li><a class="nav_link" href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
         </header>
 
-        <main id="main">
-            <h1>About Austin Muthyala</h1>
-            <p>Basic overview</p>
-            <p>Music focus</p>
-            <p>Content creation focus</p>
-            <p>Hobbies and whatnot</p>
-            <img>
+        <main id="about_main">
+            <div id="about_headline">
+                <h1>About Austin Muthyala</h1>
+            </div>
+            <div id="about_bio">
+                <p>Basic overview</p>
+            </div>
+            <div id="about_hobbies">
+                <p>Hobbies and whatnot</p>
+            </div>
         </main>
     </body>
