--- a/contact.html
+++ b/contact.html
@@ -15,15 +15,15 @@
         <a class = "skip" href="#main">Skip to Content</a>
         <header>
             <nav>
-              <ul>
-                <li><a href="main.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="music.html">Music</a></li>
-                <li><a href="content_creation.html">Content Creation</a></li>
-                <li><a href="gigs_events.html">Gigs and Events</a></li>
-                <li><a href="contact.html">Contact</a></li>
-              </ul>
-          </nav>
+                <ul class="navigation_list">
+                    <li><a class="nav_link" href="index.html">Home</a></li>
+                    <li><a class="nav_link" href="about.html">About</a></li>
+                    <li><a class="nav_link" href="music.html">Music</a></li>
+                    <li><a class="nav_link" href="content_creation.html">Videos</a></li>
+                    <li><a class="nav_link" href="gigs_events.html">Gigs</a></li>
+                    <li><a class="nav_link" href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
         </header>
 
         <main id="main">
