--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <header>
             <nav>
                 <ul class="navigation_list">
-                    <li><a class="nav_link" href="main.html">Home</a></li>
+                    <li><a class="nav_link" href="index.html">Home</a></li>
                     <li><a class="nav_link" href="about.html">About</a></li>
                     <li><a class="nav_link" href="music.html">Music</a></li>
                     <li><a class="nav_link" href="content_creation.html">Videos</a></li>
