Fixed footers to bottom of each page

--- a/about.html
+++ b/about.html
@@ -37,4 +37,9 @@
                 <p>Hobbies and whatnot</p>
             </div>
         </main>
+
+        <footer>
+            <p>Website designed by Sam Winter 2020</p>
+        </footer>
+        
     </body>
