--- a/contact.html
+++ b/contact.html
@@ -30,4 +30,9 @@
             <h1>Contact Austin Muthyala</h1>
             <p>Form</p>
         </main>
+
+        <footer>
+            <p>Website designed by Sam Winter 2020</p>
+        </footer>
+        
     </body>
