--- a/content_creation.html
+++ b/content_creation.html
@@ -32,4 +32,9 @@
             <p>YouTube channel link stylized</p>
             <p>Embedded video</p>
         </main>
+
+        <footer>
+            <p>Website designed by Sam Winter 2020</p>
+        </footer>
+        
     </body>
