--- a/gigs_events.html
+++ b/gigs_events.html
@@ -31,4 +31,8 @@
             <p>Calendar</p>
             <p>List of events</p>
         </main>
+
+        <footer>
+            <p>Website designed by Sam Winter 2020</p>
+        </footer>
     </body>
