--- a/music.html
+++ b/music.html
@@ -12,7 +12,7 @@
     </head>
 
     <body>
-        <a class = "skip" href="#main">Skip to Content</a>
+        <a class = "skip" href="#music_main">Skip to Content</a>
         <header>
             <nav>
                 <ul class="navigation_list">
@@ -26,9 +26,20 @@
             </nav>
         </header>
 
-        <main id="main">
-            <h1>Music</h1>
-            <p>Music Overview</p>
-            <p>Vids and Recordings</p>
+        <main id="music_main">
+            <div id="music_headline">
+                <h1>Music</h1>
+            </div>
+            <div id="music_text">
+                <p>Music Overview</p>
+            </div>
+            <div id="music_recordings">
+                <p>Vids and Recordings</p>
+            </div>
         </main>
+
+        <footer>
+            <p>Website designed by Sam Winter 2020</p>
+        </footer>
+        
     </body>
