Landing page made better, new animations

--- a/index.html
+++ b/index.html
@@ -28,9 +28,15 @@
         <main id="main_main">
             <img id="main_img" src="images/mb_icon.jpg" alt="Muthybaby Logo"> 
             <h1 class="main_content">Austin Muthyala</h1>
-            <p class="main_content">Trumpeter</p>
-            <p class="main_content">Composer</p>
-            <p class="main_content">Content Creator</p>
+            <div id="main1">
+                <p class="main_content">Trumpeter</p>
+            </div>
+            <div id="main2">
+                <p class="main_content">Composer</p>
+            </div>
+            <div id="main3">
+                <p class="main_content">Content Creator</p>
+            </div>
         </main>
 
         <footer>
