Lots of work added to the about page - placeholder text and images

--- a/about.html
+++ b/about.html
@@ -28,13 +28,29 @@
 
         <main id="about_main">
             <div id="about_headline">
-                <h1>About Austin Muthyala</h1>
+                <h1><span class="orange">About</span> Austin <span class="orange">Muthyala</span></h1>
             </div>
             <div id="about_bio">
-                <p>Basic overview</p>
+                <p>Basic overview: Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut 
+                    enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex 
+                    ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse 
+                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
+                    sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
+            <div id="about_imgs">
+                <img class="about_img" src="images/mb_icon.jpg" alt="Muthybaby Logo">
+                <img class="about_img" src="images/mb_icon.jpg" alt="Muthybaby Logo">
+                <img class="about_img" src="images/mb_icon.jpg" alt="Muthybaby Logo">
+                <img class="about_img" src="images/mb_icon.jpg" alt="Muthybaby Logo">
             </div>
             <div id="about_hobbies">
-                <p>Hobbies and whatnot</p>
+                <p>Hobbies and whatnot: Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut 
+                    enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex 
+                    ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse 
+                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
+                    sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
         </main>
 
