--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <main id="main_main">
             <img id="main_img" src="images/mb_icon.jpg" alt="Muthybaby Logo"> 
-            <h1 class="main_content">Austin <span id="orange">Muthyala</span></h1>
+            <h1 class="main_content">Austin <span class="orange">Muthyala</span></h1>
             <div id="main1">
                 <p class="main_content">Trumpeter</p>
             </div>
