Videos page stylized

--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
         </header>
 
         <main id="about_main">
-            <div id="about_headline">
+            <div class="headlines">
                 <h1><span class="orange">About</span> Austin <span class="orange">Muthyala</span></h1>
             </div>
             <div id="about_bio">
