--- a/content_creation.html
+++ b/content_creation.html
@@ -8,11 +8,11 @@
         <link rel="shortcut icon" type="image/jpg" href="images/mb_icon.jpg"/>
         <link rel="stylesheet" type="text/css" href="css/html5reset.css">
         <link rel="stylesheet" type="text/css" href="css/style.css">
-        <title>Content Creation</title>
+        <title>Videos</title>
     </head>
 
     <body>
-        <a class = "skip" href="#main">Skip to Content</a>
+        <a class = "skip" href="#video_main">Skip to Content</a>
         <header>
             <nav>
                 <ul class="navigation_list">
@@ -26,11 +26,36 @@
             </nav>
         </header>
 
-        <main id="main">
-            <h1>Content Creation</h1>
-            <p>Content Creation/Channel Overview</p>
-            <p>YouTube channel link stylized</p>
-            <p>Embedded video</p>
+        <main id="video_main">
+            <div class="headlines">
+                <h1>Content <span class="orange">Creation</span></h1>
+            </div>
+            <div id="video_desc">
+                <p>Content Overview: Music, games, etc. lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut 
+                    enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex 
+                    ea commodo consequat.</p>
+            </div>
+            <a href="https://www.youtube.com/channel/UC6AO7AsbFpjEsR_N7eI0t7A" class="w3-button" id="channel_link">Check out my channel!</a>
+            <div id="video_section">
+                <h2>Latest Video</h2>
+                <iframe src="https://www.youtube.com/embed/qxV4HOrIyDw" frameborder="0" allow="accelerometer; 
+                autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <p>This is my arrangement of Nobou Utemasu's gorgeous song "Tifa's Theme" from FF7. 
+                    I've mixed in some elements of Jazz and Candombe (Afro-Uruguayan Folk music), and 
+                    my best friends really brought this arrangement to life.</p>
+                <div id="thanks_list">
+                    <h3>Special thanks to:</h3>
+                    <ul>
+                        <li>Liany Mateo - Bass</li>
+                        <li>REDWOOD- Piano</li>
+                        <li>Nick Chard - Drums</li>
+                        <li>Eric Law - Alto Sax</li>
+                        <li>Grant Teeple - Mixing</li>
+                        <li>Nobuo Uematsu - Composer</li>
+                    </ul>
+                </div>
+            </div>
         </main>
 
         <footer>
