Reduced style redundancy, added new nav_link appearance, manipulated video on video page

--- a/content_creation.html
+++ b/content_creation.html
@@ -19,7 +19,7 @@
                     <li><a class="nav_link" href="index.html">Home</a></li>
                     <li><a class="nav_link" href="about.html">About</a></li>
                     <li><a class="nav_link" href="music.html">Music</a></li>
-                    <li><a class="nav_link" href="content_creation.html">Videos</a></li>
+                    <li><a class="current_page" class="nav_link" href="content_creation.html">Videos</a></li>
                     <li><a class="nav_link" href="gigs_events.html">Gigs</a></li>
                     <li><a class="nav_link" href="contact.html">Contact</a></li>
                 </ul>
@@ -30,16 +30,16 @@
             <div class="headlines">
                 <h1>Content <span class="orange">Creation</span></h1>
             </div>
-            <div id="video_desc">
+            <div id="video_desc" class="page_card">
                 <p>Content Overview: Music, games, etc. lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut 
                     enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex 
                     ea commodo consequat.</p>
             </div>
             <a href="https://www.youtube.com/channel/UC6AO7AsbFpjEsR_N7eI0t7A" class="w3-button" id="channel_link">Check out my channel!</a>
-            <div id="video_section">
+            <div id="video_section" class="page_card">
                 <h2>Latest Video</h2>
-                <iframe src="https://www.youtube.com/embed/qxV4HOrIyDw" frameborder="0" allow="accelerometer; 
+                <iframe src="https://www.youtube.com/embed/qxV4HOrIyDw" width="306" height="150" frameborder="0" allow="accelerometer; 
                 autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <p>This is my arrangement of Nobou Utemasu's gorgeous song "Tifa's Theme" from FF7. 
                     I've mixed in some elements of Jazz and Candombe (Afro-Uruguayan Folk music), and 
