--- a/gigs_events.html
+++ b/gigs_events.html
@@ -20,7 +20,7 @@
                     <li><a class="nav_link" href="about.html">About</a></li>
                     <li><a class="nav_link" href="music.html">Music</a></li>
                     <li><a class="nav_link" href="content_creation.html">Videos</a></li>
-                    <li><a class="nav_link" href="gigs_events.html">Gigs</a></li>
+                    <li><a class="current_page" class="nav_link" href="gigs_events.html">Gigs</a></li>
                     <li><a class="nav_link" href="contact.html">Contact</a></li>
                 </ul>
             </nav>
