--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <header>
             <nav>
                 <ul class="navigation_list">
-                    <li><a class="nav_link" href="index.html">Home</a></li>
+                    <li><a class="current_page" class="nav_link" href="index.html">Home</a></li>
                     <li><a class="nav_link" href="about.html">About</a></li>
                     <li><a class="nav_link" href="music.html">Music</a></li>
                     <li><a class="nav_link" href="content_creation.html">Videos</a></li>
@@ -25,17 +25,17 @@
             </nav>
         </header>
 
-        <main id="main_main">
-            <img id="main_img" src="images/mb_icon.jpg" alt="Muthybaby Logo"> 
-            <h1 class="main_content">Austin <span class="orange">Muthyala</span></h1>
-            <div id="main1">
-                <p class="main_content">Trumpeter</p>
+        <main id="home_main">
+            <img id="home_img" src="images/mb_icon.jpg" alt="Muthybaby Logo"> 
+            <h1 class="home_content">Austin <span class="orange">Muthyala</span></h1>
+            <div id="home1">
+                <p class="home_content">Trumpeter</p>
             </div>
-            <div id="main2">
-                <p class="main_content">Composer</p>
+            <div id="home2">
+                <p class="home_content">Composer</p>
             </div>
-            <div id="main3">
-                <p class="main_content">Content Creator</p>
+            <div id="home3">
+                <p class="home_content">Content Creator</p>
             </div>
         </main>
 
