--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
             <nav>
                 <ul class="navigation_list">
                     <li><a class="nav_link" href="index.html">Home</a></li>
-                    <li><a class="nav_link" href="about.html">About</a></li>
+                    <li><a class="current_page" class="nav_link" href="about.html">About</a></li>
                     <li><a class="nav_link" href="music.html">Music</a></li>
                     <li><a class="nav_link" href="content_creation.html">Videos</a></li>
                     <li><a class="nav_link" href="gigs_events.html">Gigs</a></li>
@@ -30,7 +30,7 @@
             <div class="headlines">
                 <h1><span class="orange">About</span> Austin <span class="orange">Muthyala</span></h1>
             </div>
-            <div id="about_bio">
+            <div id="about_bio" class="page_card">
                 <p>Basic overview: Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut 
                     enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex 
@@ -44,7 +44,7 @@
                 <img class="about_img" src="images/mb_icon.jpg" alt="Muthybaby Logo">
                 <img class="about_img" src="images/mb_icon.jpg" alt="Muthybaby Logo">
             </div>
-            <div id="about_hobbies">
+            <div id="about_hobbies" class="page_card">
                 <p>Hobbies and whatnot: Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut 
                     enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex 
