--- a/music.html
+++ b/music.html
@@ -18,7 +18,7 @@
                 <ul class="navigation_list">
                     <li><a class="nav_link" href="index.html">Home</a></li>
                     <li><a class="nav_link" href="about.html">About</a></li>
-                    <li><a class="nav_link" href="music.html">Music</a></li>
+                    <li><a class="current_page" class="nav_link" href="music.html">Music</a></li>
                     <li><a class="nav_link" href="content_creation.html">Videos</a></li>
                     <li><a class="nav_link" href="gigs_events.html">Gigs</a></li>
                     <li><a class="nav_link" href="contact.html">Contact</a></li>
