Cut down on code repetition, foundation of music page laid out

--- a/about.html
+++ b/about.html
@@ -26,8 +26,8 @@
             </nav>
         </header>
 
-        <main id="about_main">
-            <div class="headlines">
+        <main id="about_main" class="main_container">
+            <div class="headlines" id="about_headline">
                 <h1><span class="orange">About</span> Austin <span class="orange">Muthyala</span></h1>
             </div>
             <div id="about_bio" class="page_card">
@@ -38,7 +38,7 @@
                     cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
                     sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
-            <div id="about_imgs">
+            <div id="about_imgs" class="imgs_container">
                 <img class="about_img" src="images/mb_icon.jpg" alt="Muthybaby Logo">
                 <img class="about_img" src="images/mb_icon.jpg" alt="Muthybaby Logo">
                 <img class="about_img" src="images/mb_icon.jpg" alt="Muthybaby Logo">
