--- a/content_creation.html
+++ b/content_creation.html
@@ -26,7 +26,7 @@
             </nav>
         </header>
 
-        <main id="video_main">
+        <main id="video_main" class="main_container">
             <div class="headlines">
                 <h1>Content <span class="orange">Creation</span></h1>
             </div>
