--- a/music.html
+++ b/music.html
@@ -26,15 +26,42 @@
             </nav>
         </header>
 
-        <main id="music_main">
-            <div id="music_headline">
+        <main id="music_main" class="main_container">
+            <div class="headlines">
                 <h1>Music</h1>
             </div>
-            <div id="music_text">
-                <p>Music Overview</p>
+            <div id="music_ov" class="page_card">
+                <p>Music Overview - genres played, groups you are a part of, inspirations, etc.
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut 
+                    enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex 
+                    ea commodo consequat.
+                </p>
             </div>
-            <div id="music_recordings">
-                <p>Vids and Recordings</p>
+            <div id="music_imgs" class="imgs_container">
+                <img class="about_img" src="images/mb_icon.jpg" alt="Muthybaby Logo">
+                <img class="about_img" src="images/mb_icon.jpg" alt="Muthybaby Logo">
+                <img class="about_img" src="images/mb_icon.jpg" alt="Muthybaby Logo">
+                <img class="about_img" src="images/mb_icon.jpg" alt="Muthybaby Logo">
+            </div>
+            <div id="music_studies" class="page_card">
+                <p>Schooling at MSU, teachers, people studied with, etc.
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut 
+                    enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex 
+                    ea commodo consequat.
+                </p>
+            </div>
+            <div id="music_offers" class="page_card">
+                <p>Offer lessons? Events that will play? etc.
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut 
+                    enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex 
+                    ea commodo consequat.
+                </p>
+            </div>
+            <div id="music_vids" class="page_card">
+                <p>Recordings and videos of you playing will go here</p>
             </div>
         </main>
 
