Gigs page structure added

--- a/gigs_events.html
+++ b/gigs_events.html
@@ -26,10 +26,32 @@
             </nav>
         </header>
 
-        <main id="main">
-            <h1>Gigs and Events</h1>
-            <p>Calendar</p>
-            <p>List of events</p>
+        <main id="gigs_main">
+            <h1>Gigs <span class="orange">and</span> Events</h1>
+            <div class="left_stick" class="stick">
+                <p class="gigs_content">Latest gig</p>
+            </div>
+            <div class="right_stick" class="stick">
+                <p class="gigs_content">Gig 2</p>
+            </div>
+            <div class="left_stick" class="stick">
+                <p class="gigs_content">Gig 3</p>
+            </div>
+            <div class="right_stick" class="stick">
+                <p class="gigs_content">Gig 4</p>
+            </div>
+            <div class="left_stick" class="stick">
+                <p class="gigs_content">Gig 5</p>
+            </div>
+            <div class="right_stick" class="stick">
+                <p class="gigs_content">Gig 6</p>
+            </div>
+            <div class="left_stick" class="stick">
+                <p class="gigs_content">Gig 7</p>
+            </div>
+            <div class="right_stick" class="stick">
+                <p class="gigs_content">Gig 8</p>
+            </div>
         </main>
 
         <footer>
