Added images to gigs page

--- a/gigs_events.html
+++ b/gigs_events.html
@@ -52,6 +52,12 @@
             <div class="right_stick" class="stick">
                 <p class="gigs_content">Gig 8</p>
             </div>
+            <div id="gigs_imgs" class="imgs_container">
+                <img class="about_img" src="images/mb_icon.jpg" alt="Muthybaby Logo">
+                <img class="about_img" src="images/mb_icon.jpg" alt="Muthybaby Logo">
+                <img class="about_img" src="images/mb_icon.jpg" alt="Muthybaby Logo">
+                <img class="about_img" src="images/mb_icon.jpg" alt="Muthybaby Logo">
+            </div>
         </main>
 
         <footer>
