Styled contact form, added a new video

--- a/content_creation.html
+++ b/content_creation.html
@@ -37,18 +37,32 @@
                     ea commodo consequat.</p>
             </div>
             <a href="https://www.youtube.com/channel/UC6AO7AsbFpjEsR_N7eI0t7A" class="w3-button" id="channel_link">Check out my channel!</a>
-            <div id="video_section" class="page_card">
+            <div id="video_section1" class="page_card">
                 <h2>Latest Video</h2>
+                <iframe src="https://www.youtube.com/embed/p4rFJIxkbAM" width="306" height="150" frameborder="0" allow="accelerometer; 
+                autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <p>Donna Lee by Charlie Parker<br>Welcome to our Weekly Standards w/ friends! This is a new series where we'll be playing standards as a trio w/
+                     some special guests coming soon!!</p>
+                <div class="feature_list">
+                    <h3>Featuring:</h3>
+                    <ul>
+                        <li>Emma Wilburn - Bass</li>
+                        <li>Luke Sittard - Guitar</li>
+                    </ul>
+                </div>
+            </div>
+            <div id="video_section2" class="page_card">
+                <h2>Past Videos</h2>
                 <iframe src="https://www.youtube.com/embed/qxV4HOrIyDw" width="306" height="150" frameborder="0" allow="accelerometer; 
                 autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <p>This is my arrangement of Nobou Utemasu's gorgeous song "Tifa's Theme" from FF7. 
                     I've mixed in some elements of Jazz and Candombe (Afro-Uruguayan Folk music), and 
                     my best friends really brought this arrangement to life.</p>
-                <div id="thanks_list">
+                <div class="feature_list">
                     <h3>Special thanks to:</h3>
                     <ul>
                         <li>Liany Mateo - Bass</li>
-                        <li>REDWOOD- Piano</li>
+                        <li>REDWOOD - Piano</li>
                         <li>Nick Chard - Drums</li>
                         <li>Eric Law - Alto Sax</li>
                         <li>Grant Teeple - Mixing</li>
