Stylized the contact form, added real text to about page

--- a/about.html
+++ b/about.html
@@ -31,12 +31,21 @@
                 <h1><span class="orange">About</span> Austin <span class="orange">Muthyala</span></h1>
             </div>
             <div id="about_bio" class="page_card">
-                <p>Basic overview: Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut 
-                    enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex 
-                    ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse 
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
-                    sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>Austin Muthyala is a young and upcoming jazz trumpet player from Byron
+                    Center, Michigan. He is a versatile musician that can blend into a variety of musical
+                    styles. At 21 years old, as a member of MSU Jazz Orchestra he had the opportunity to
+                    perform with many of today’s celebrated musicians such as: Terell Stafford, Melissa
+                    Aldana, Harvey Mason, Tim Warfield, and Kenny Washington. He is a Geri Allen fellow
+                    and a member of the Gathering Orchestra under the direction of Rodney Whitaker. <br><br>
+                    In addition, professionally, he is a core member of Orquesta RITMO, one of the premier
+                    salsa bands in West Michigan, as well as Global Village, SLOAN and the Filthy
+                    Animals, and the BlueWater Kings organization. He is a student of Etienne Charles in his
+                    senior year at Michigan State University. Currently, he is a member of the local music
+                    scene in Lansing, MI.<br><br>
+                    Most recently, Austin has begun the path of content creation by creating his
+                    YouTube channel, muthybaby. Inspired by his favorite content creators (YouTubers and
+                    streamers alike), he decided to take the plunge and use the new platform as another
+                    means of sharing his music.</p>
             </div>
             <div id="about_imgs" class="imgs_container">
                 <img class="about_img" src="images/mb_icon.jpg" alt="Muthybaby Logo">
@@ -45,12 +54,8 @@
                 <img class="about_img" src="images/mb_icon.jpg" alt="Muthybaby Logo">
             </div>
             <div id="about_hobbies" class="page_card">
-                <p>Hobbies and whatnot: Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut 
-                    enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex 
-                    ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse 
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
-                    sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>When he is not playing music, you can find Austin gaming with his friends, editing videos,
+                    watching anime, or reading.</p>
             </div>
         </main>
 
