Added pictures to contact page

--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,13 @@
                     <input id="submit" type="submit" value="Submit">
               
                 </form>
-              </div> 
+            </div> 
+            <div id="contact_imgs" class="imgs_container">
+                <img class="about_img" src="images/mb_icon.jpg" alt="Muthybaby Logo">
+                <img class="about_img" src="images/mb_icon.jpg" alt="Muthybaby Logo">
+                <img class="about_img" src="images/mb_icon.jpg" alt="Muthybaby Logo">
+                <img class="about_img" src="images/mb_icon.jpg" alt="Muthybaby Logo">
+            </div>
         </main>
 
         <footer>
