Non-placeholder images added

--- a/about.html
+++ b/about.html
@@ -48,10 +48,10 @@
                     means of sharing his music.</p>
             </div>
             <div id="about_imgs" class="imgs_container">
-                <img class="about_img" src="images/mb_icon.jpg" alt="Muthybaby Logo">
-                <img class="about_img" src="images/mb_icon.jpg" alt="Muthybaby Logo">
-                <img class="about_img" src="images/mb_icon.jpg" alt="Muthybaby Logo">
-                <img class="about_img" src="images/mb_icon.jpg" alt="Muthybaby Logo">
+                <img class="small_img" src="images/about/ace.jpg" alt="Austin by the ACE sign">
+                <img class="small_img" src="images/about/pose.jpg" alt="Austin playing the trumpet">
+                <img class="small_img" src="images/about/friends.jpg" alt="Austin and friends">
+                <img class="small_img" src="images/about/solo.jpg" alt="Austin performing a solo">
             </div>
             <div id="about_hobbies" class="page_card">
                 <p>When he is not playing music, you can find Austin gaming with his friends, editing videos,
