--- a/music.html
+++ b/music.html
@@ -39,29 +39,23 @@
                 </p>
             </div>
             <div id="music_imgs" class="imgs_container">
-                <img class="about_img" src="images/mb_icon.jpg" alt="Muthybaby Logo">
-                <img class="about_img" src="images/mb_icon.jpg" alt="Muthybaby Logo">
-                <img class="about_img" src="images/mb_icon.jpg" alt="Muthybaby Logo">
-                <img class="about_img" src="images/mb_icon.jpg" alt="Muthybaby Logo">
+                <img class="large_img" src="images/music/the_gathering.jpg" alt="The Gathering Orchestra">
+                <img class="small_img" src="images/music/team.jpg" alt="Austin and teammates">
+                <img class="small_img" src="images/music/jack_rudin.jpg" alt="Austin at Jack Rudin">
+                <img class="large_img" src="images/music/octet.jpg" alt="Austin's octet">
             </div>
             <div id="music_studies" class="page_card">
                 <p>Schooling at MSU, teachers, people studied with, etc.
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut 
                     enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex 
-                    ea commodo consequat.
-                </p>
-            </div>
-            <div id="music_offers" class="page_card">
-                <p>Offer lessons? Events that will play? etc.
+                    ea commodo consequat. <br> <br>
+                    Offer lessons? Events that will play? etc.
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut 
                     enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex 
                     ea commodo consequat.
                 </p>
-            </div>
-            <div id="music_vids" class="page_card">
-                <p>Recordings and videos of you playing will go here</p>
             </div>
         </main>
 
