--- a/contact.html
+++ b/contact.html
@@ -58,10 +58,11 @@
                 </form>
             </div> 
             <div id="contact_imgs" class="imgs_container">
-                <img class="about_img" src="images/mb_icon.jpg" alt="Muthybaby Logo">
-                <img class="about_img" src="images/mb_icon.jpg" alt="Muthybaby Logo">
-                <img class="about_img" src="images/mb_icon.jpg" alt="Muthybaby Logo">
-                <img class="about_img" src="images/mb_icon.jpg" alt="Muthybaby Logo">
+                <img class="small_img" src="images/contact/solo2.jpg" alt="Austin taking a solo">
+                <img class="small_img" src="images/contact/solo3.jpg" alt="Austin taking a solo">
+                <img id="the_boys" class="large_img" src="images/contact/the_boys.jpg" alt="Austin and the boys">
+                <img class="small_img" src="images/contact/wynton.jpg" alt="Austin and Wynton Marsalis">
+                <img class="small_img" src="images/contact/solo4.jpg" alt="Austin taking a solo">
             </div>
         </main>
 
