--- a/gigs_events.html
+++ b/gigs_events.html
@@ -53,10 +53,9 @@
                 <p class="gigs_content">Gig 8</p>
             </div>
             <div id="gigs_imgs" class="imgs_container">
-                <img class="about_img" src="images/mb_icon.jpg" alt="Muthybaby Logo">
-                <img class="about_img" src="images/mb_icon.jpg" alt="Muthybaby Logo">
-                <img class="about_img" src="images/mb_icon.jpg" alt="Muthybaby Logo">
-                <img class="about_img" src="images/mb_icon.jpg" alt="Muthybaby Logo">
+                <img class="large_img" src="images/gigs/salsa.jpg" alt="Austin and his salsa band">
+                <img class="large_img" src="images/gigs/orquesta_ritmo.jpg" alt="Orquesta Ritmo">
+                <img class="large_img" src="images/gigs/band.jpg" alt="Austin and the band">
             </div>
         </main>
 
