Images slightly resized

--- a/gigs_events.html
+++ b/gigs_events.html
@@ -28,28 +28,28 @@
 
         <main id="gigs_main">
             <h1>Gigs <span class="orange">and</span> Events</h1>
-            <div class="left_stick" class="stick">
-                <p class="gigs_content">Latest gig</p>
+            <div class="left_stick">
+                <p class="gigs_content">Latest Gig</p>
             </div>
-            <div class="right_stick" class="stick">
+            <div class="right_stick">
                 <p class="gigs_content">Gig 2</p>
             </div>
-            <div class="left_stick" class="stick">
+            <div class="left_stick">
                 <p class="gigs_content">Gig 3</p>
             </div>
-            <div class="right_stick" class="stick">
+            <div class="right_stick">
                 <p class="gigs_content">Gig 4</p>
             </div>
-            <div class="left_stick" class="stick">
+            <div class="left_stick">
                 <p class="gigs_content">Gig 5</p>
             </div>
-            <div class="right_stick" class="stick">
+            <div class="right_stick">
                 <p class="gigs_content">Gig 6</p>
             </div>
-            <div class="left_stick" class="stick">
+            <div class="left_stick">
                 <p class="gigs_content">Gig 7</p>
             </div>
-            <div class="right_stick" class="stick">
+            <div class="right_stick">
                 <p class="gigs_content">Gig 8</p>
             </div>
             <div id="gigs_imgs" class="imgs_container">
