--- a/content_creation.html
+++ b/content_creation.html
@@ -38,21 +38,23 @@
             </div>
             <a href="https://www.youtube.com/channel/UC6AO7AsbFpjEsR_N7eI0t7A" class="w3-button" id="channel_link">Check out my channel!</a>
             <div id="video_section1" class="page_card">
-                <h2>Latest Video</h2>
+                <h2>Weekly Standard</h2>
                 <iframe src="https://www.youtube.com/embed/p4rFJIxkbAM" width="306" height="150" frameborder="0" allow="accelerometer; 
                 autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <p>Donna Lee by Charlie Parker<br>Welcome to our Weekly Standards w/ friends! This is a new series where we'll be playing standards as a trio w/
-                     some special guests coming soon!!</p>
+                <p>Welcome to the 2nd standard of the week! We are covering Just Friends, a very popular jazz standard. We sincerely 
+                    hope you enjoy! More is on the way, so please like and subscribe for more!!
+                    <br>HUGE SHOUT OUT TO THE  OTHER MEMBERS OF THE BAND (YOU GUYS KILLED IT)</p>
                 <div class="feature_list">
-                    <h3>Featuring:</h3>
+                    <h3>Personnel:</h3>
                     <ul>
                         <li>Emma Wilburn - Bass</li>
                         <li>Luke Sittard - Guitar</li>
+                        <li>Austin Muthyala - Trumpet</li>
                     </ul>
                 </div>
             </div>
             <div id="video_section2" class="page_card">
-                <h2>Past Videos</h2>
+                <h2>Featured Video</h2>
                 <iframe src="https://www.youtube.com/embed/qxV4HOrIyDw" width="306" height="150" frameborder="0" allow="accelerometer; 
                 autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <p>This is my arrangement of Nobou Utemasu's gorgeous song "Tifa's Theme" from FF7. 
