--- a/content_creation.html
+++ b/content_creation.html
@@ -39,7 +39,7 @@
             <a href="https://www.youtube.com/channel/UC6AO7AsbFpjEsR_N7eI0t7A" class="w3-button" id="channel_link">Check out my channel!</a>
             <div id="video_section1" class="page_card">
                 <h2>Weekly Standard</h2>
-                <iframe src="https://www.youtube.com/embed/p4rFJIxkbAM" width="306" height="150" frameborder="0" allow="accelerometer; 
+                <iframe src="https://youtube.com/embed/nhDXVvV-UZQ" width="306" height="150" frameborder="0" allow="accelerometer; 
                 autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <p>Welcome to the 2nd standard of the week! We are covering Just Friends, a very popular jazz standard. We sincerely 
                     hope you enjoy! More is on the way, so please like and subscribe for more!!
